# medicine_tracking

./: Cargo.toml  README.md
src/: common_structs.rs  error_custom.rs  main.rs  medicine_logic.rs  model.rs  postgres_custom.rs  schema.rs  tests.rs
static/: index.html  style.css
templates/: index.html.tera
