[package]
name = "medicine_tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.5"
tokio = "1.15.0"
postgres = "0.19.2"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
log = "0.4.14"
simplelog = "0.11.2"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
indexmap = "1.8.1"
